--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
   <title>My profile</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css"
+  <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <div class="card-white" id="introduction">
-      <h1>Hello, I'm Bernard 😎</h1>
+      <h1> Hello, I'm Bernard
+        The Programming G 😎</h1>
+    </div>
+    <div class="card-white">
       <img src="images/bm1.jpg" class="img-circle" width="100px" alt="Bernard Manikwa">
       <p>
-        I love sports, music and tech 🤖. I love travelling the 🌍 and learning different cultures. Why don't join Le Wagon's bootcamp and also learn coding,data science and analytics.
+        I love sports, music and tech 🤖. I love travelling the 🌍 and learning different cultures. Why don't you join Le Wagon's bootcamp and also learn coding,data science and analytics!
       </p>
       <a href="#" class="btn-blue">Discover Le Wagon</a>
     </div>
     <div class="card-white">
-      <h2>Follow me</h2>
+      <h3>Follow me</h3>
       <ul class="list-inline">
         <li>
           <a href="https://github.com/BernardManikwa" target="_blank">
@@ -25,7 +29,7 @@
         </li>
         <li>
           <a href="https://linkedin.com/in/bernard-k-m-884a9a37/" target="_blank">
-            <i class="fab fa-linkedin-square"></i>
+            <i class="fab fa-linkedin"></i>
           </a>
         </li>
         <li>
